# ksmm

./: .babelrc  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  Readme.md  environment.yaml  install.json  ipyschema.ipynb  kernel1.json  kernel2.json  ksmm.py  main.py  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.json
.github/workflows/: build.yml  main.yml
examples/python-template-1/: kernel.json
examples/python-template-2/: kernel.json
jupyter-config/jupyter_server_config.d/: enable_server.json
jupyter-config/nb-config/: ksmm.json
ksmm/: __init__.py  __main__.py  _version.py  handlers.py  kernel_schema.py  kernelspec_templating.py  templating.py
ksmm/.ipynb_checkpoints/: __init__-checkpoint.py  handlers-checkpoint.py
schema/: kernelSchema.json
src/: handler.ts  index.ts  ipyschema.ts  kschema.ts  selector.tsx  widget.tsx  windowfuncs.ts
src/.ipynb_checkpoints/: widget-checkpoint.tsx
src/components/: alerts.tsx  envvar.tsx  envvarwidget.tsx  ipycardgrid.tsx  ipyform.tsx  ipythonformgroup.tsx  keyval.tsx  kscard.tsx  kscardgrid.tsx  ksform.tsx  ksformgroup.tsx  ksmenu.tsx
src/components/fields/: envvar.tsx  ipymenu.tsx
src/components/widgets/: keyval.tsx
style/: extracted_bootstrap_styles.css  index.css
tools/: verify_wheel.py
